--- a/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
@@ -32,7 +32,7 @@
             <br>
             <div class="row form-inline">
                 <div class="control-label col-md-3">
-                    <label>Personalizado: </label>
+                    <label>Cantidad AdquiridaXCantidad Comprada: </label>
                 </div>                
                 @Html.EditorFor(model => model.cantAdq, new { @class = "col-md-3" })
                 @Html.ValidationMessageFor(model => model.cantAdq)
