--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                     @Html.AntiForgeryToken()
 
                     <div class="nav navbar-nav navbar-right">
-                        <font color="white"> Hola @nombre!</font>
+                        <font color="white" onclick="redirige()"> Hola @nombre!</font>
                         <a type="button" class="btn btn-default" href="javascript:document.getElementById('logoutForm').submit()">Cerrar Sesion <span class="glyphicon glyphicon-log-out"></span></a>
                     </div>
                     }
@@ -195,7 +195,7 @@ else {
                         @Html.AntiForgeryToken()
 
                             <div class="nav navbar-nav navbar-right">
-                                    <font color="white"> Hola @nombre!</font>
+                                <font color="white" onclick="redirige()"> Hola @nombre!</font>
                                 <a  type="button" class="btn btn-default"  href="javascript:document.getElementById('logoutForm').submit()">Salir <span class="glyphicon glyphicon-log-out"></span></a>
                             </div>
                             }
@@ -299,3 +299,9 @@ else {
 
 
 }
+
+<script>
+    function redirige() {
+        window.location.href = '/CuentaUsuario/MiCuenta';
+    }
+</script>
