--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -69,7 +69,7 @@
                             <ul class="dropdown-menu">
                                 <!--Administrador-->
                                 <li><a href="@Url.Action("Asignacion", "CuentaUsuario")">Asignar turnos y puntos de venta</a></li>
-                                <li><a href="mantener_politicas.html">Políticas de la empresa</a></li>
+                                <li><a href="@Url.Action("Politicas", "CuentaUsuario")">Políticas de la empresa</a></li>
                                 <li><a href="@Url.Action("Index", "TipoDeCambio")">Tipo de cambio</a></li>
                                 <li><a href="@Url.Action("Pago", "Ventas")">Registrar pagos</a></li>
                             </ul>
